# landmanager

./: .flake8  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: check.yml
landmanager/components/base/: __init__.py  cell.py  component.py  entity.py  individual.py  output.py  utils.py  world.py
landmanager/components/lpjml/: __init__.py  component.py
landmanager/components/management/: __init__.py  cell.py  component.py  farmer.py  world.py
landmanager/components/management/crop_calendar/: __init__.py  cell.py  farmer.py  world.py
landmanager/components/management/fertilization/: world.py
landmanager/components/management/llm_fertilization/: __init__.py  cell.py  component.py  farmer.py
landmanager/data/crop_calendar/: crop_parameters.csv
landmanager/models/crop_calendar/: config.yaml  main.py  model.py
landmanager/models/llm_agent_fert/: LLM_farmer.py  config.yaml  model.py
landmanager/models/llm_fertilization/: __init__.py  config.yaml  main.py  model.py
pymodels/components/base/: entity.py  individual.py  utils.py
pymodels/components/farming/: cell.py  component.py  farmer.py  world.py
pymodels/components/farming/management/crop_calendar/: farmer.py
pymodels/data/crop_calendar/: crop_parameters.csv  lpjml_crop_parameters_ggcmi_ph3.csv
pymodels/models/crop_calendar/: __init__.py  config.yaml  main.py  model.py
scripts/: run_landmanager.py  run_lpjml.py  run_pymodels short.py  run_pymodels.py  submit_landmanager.py  submit_lpjml.py  submit_pymodels.py
tests/: conftest.py  test_crop_calendar.py  test_regenerative_tillage.py
tests/data/: config.json  lpjml.pkl  lpjml_input.pkl  lpjml_output.pkl  output.pkl  test_output_table.csv  write_testdata.py
