[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmanager"
version = "0.1.4"
description = "Models build around LPJmL based on the copan:LPJmL modeling framework"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    { name = "Jannes Breier", email = "jannes.breier@pik-potsdam.de" },
    { name = "Stephen B. Wirth", email = "stephen.wirth@pik-potsdam.de" }
]
requires-python = ">=3.9"
keywords = ["DGVM", "ABM", "LPJmL", "copan:CORE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "numpy>=1.20.3",
    "pandas>=1.3.3",
    "xarray>=0.21.1",
    "ruamel.yaml>=0.17.16",
    "pyarrow>17.0.0",
    "dotenv",
    "openai",
    "pycopancore @ git+https://github.com/PIK-copan/pycopancore.git",
    "pycoupler @ git+https://github.com/PIK-LPJmL/pycoupler.git",
    "pycopanlpjml @ git+https://github.com/PIK-copan/pycopanlpjml.git"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/jannesbr/landmanager"
Issues = "https://github.com/jannesbr/landmanager/issues"

[tool.aliases]
test = "pytest"
docs = "sphinx-build -b html ./docs ./docs/_build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"

[tool.black]
line-length = 95
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.flake8]
max-line-length = 79

[project.scripts]
landmanager-cli = "landmanager.cli:main"

[tool.setuptools.package-data]
"landmanager.data" = ["**/*.csv"]  # Includes all CSVs inside landmanager/data